# binarmor

./: '  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conanfile.py  linux.tc.cmake  macos.tc.cmake  main.cpp  windows.tc.cmake
src/core/: Binary.cpp  Binary.hpp  BinaryPointer.cpp  BinaryPointer.hpp  CMakeLists.txt  attributes.hpp
src/core/analysis/: AnalysisRunner.cpp  AnalysisRunner.hpp  IAnalyzer.hpp
src/core/analysis/analyzers/: FormatAnalyzer.cpp  FormatAnalyzer.hpp  HashAnalyzer.cpp  HashAnalyzer.hpp  PeAnalyzer.cpp  PeAnalyzer.hpp
src/core/analysis/exceptions/: UnsupportedFileException.hpp
src/core/application/: behave.cpp  behave.hpp  container.cpp  container.hpp
src/core/application/events/: BinaryFileAnalyzedEvent.hpp  BinaryFileLoadedEvent.hpp  DetectedUnsupportedFileEvent.hpp  FileLoadedEvent.hpp  FileSelectedOnListEvent.hpp  FileUnloadRequestedEvent.hpp  FileUnloadedEvent.hpp  NewFileSelectedEvent.cpp  NewFileSelectedEvent.hpp  WorkFileChangeRequestedEvent.hpp
src/core/assembler/: AssembleException.hpp  Assembler.hpp  Disassembler.hpp  defines.hpp
src/core/assembler/asmjit/: AsmJitAssembler.cpp  AsmJitAssembler.hpp
src/core/assembler/capstone/: CapstoneDisassembler.cpp  CapstoneDisassembler.hpp
src/core/assembler/keystone/: KeystoneAssembler.cpp  KeystoneAssembler.hpp
src/core/file/: Binary.cpp  Binary.hpp  BinaryAttributes.cpp  BinaryAttributes.hpp  BinaryFile.cpp  BinaryFile.hpp  BinaryFileAttributes.hpp  BinaryFileFlags.hpp  BinaryFileLoaded.hpp  BinaryFileLoadedEvent.hpp  BinaryFileStateManager.cpp  BinaryFileStateManager.hpp  BinaryModification.cpp  BinaryModification.hpp  BinaryPointer.cpp  BinaryPointer.hpp  IFileReader.hpp  IFileSystem.hpp  NewFileSelected.hpp  NewFileSelectedEvent.cpp  NewFileSelectedEvent.hpp  UIRequestedOpenFile.hpp  attributes.hpp  flags.hpp
src/core/file/analysis/: AnalysisResult.cpp  AnalysisResult.hpp  AnalysisRunner.cpp  AnalysisRunner.hpp  BinaryFileAnalyzedEvent.hpp  IAnalyzer.hpp  UnsupportedFileException.hpp
src/core/file/diff/: DiffExtractor.cpp  DiffExtractor.hpp
src/core/file/events/: BinaryFileLoadedEvent.hpp  UIRequestedOpenFileEvent.hpp
src/core/file/format/: IFormat.cpp  IFormat.hpp  IImport.hpp  IModule.hpp  ISection.hpp  functions.cpp  functions.hpp
src/core/file/fstream/: fstreamFileReader.cpp  fstreamFileReader.hpp
src/core/format/: IFormat.hpp  IImport.hpp  IModule.hpp  ISection.hpp  functions.cpp  functions.hpp
src/core/format/pe/: PeFormat.cpp  PeFormat.hpp  PeImport.cpp  PeImport.hpp  PeModule.cpp  PeModule.hpp  PeSection.cpp  PeSection.hpp  defines.hpp  functions.cpp  functions.hpp
src/core/modification/: AddBytesCommand.hpp  AddExecutableCodeCommand.hpp  AddImportCommand.hpp  AddImportsCommand.hpp  AddSectionCommand.hpp  AddStartupCodeCommand.hpp  ChangeBytesCommand.hpp  EncryptOriginalImportsCommand.hpp  InitializeMainProtectionSectionCommand.hpp  ModificationCommand.hpp  ModificationException.hpp  WriteBytesCommand.hpp  ids.hpp
src/core/modification/bytes/: AddBytesHandler.cpp  AddBytesHandler.hpp  ChangeBytesHandler.cpp  ChangeBytesHandler.hpp  InsertedBytesQuery.hpp  InsertedBytesRepository.hpp
src/core/modification/code/: AddBytesHandler.cpp  AddBytesHandler.hpp  InsertedBytes.hpp
src/core/modification/diff/: DiffExtractor.cpp  DiffExtractor.hpp
src/core/modification/handler/: AddExecutableCodeHandler.cpp  AddExecutableCodeHandler.hpp
src/core/modification/import/: AddImportHandler.cpp  AddImportHandler.hpp  AddImportsHandler.cpp  AddImportsHandler.hpp  EncryptOriginalImportsHandler.cpp  EncryptOriginalImportsHandler.hpp
src/core/modification/resize/: BinarySizeChangedEvent.hpp  FixBinaryResizeCommand.hpp  FixBinaryResizeHandler.cpp  FixBinaryResizeHandler.hpp
src/core/modification/section/: AddSectionHandler.cpp  AddSectionHandler.hpp  InitializeMainProtectionSectionHandler.cpp  InitializeMainProtectionSectionHandler.hpp  Section.hpp  SectionQuery.hpp
src/core/payload/: IPayload.hpp  PayloadProcessor.hpp  PeX86SplashPayload.hpp  defines.hpp
src/core/payload/processor/: DefaultPayloadProcessor.cpp  DefaultPayloadProcessor.hpp  NasmData.cpp  NasmData.hpp  NasmPayloadProcessor.cpp  NasmPayloadProcessor.hpp  NasmProcedure.cpp  NasmProcedure.hpp  PayloadProcessor.hpp
src/core/shared/: Binary.cpp  Binary.hpp  BinaryPointer.cpp  BinaryPointer.hpp  SectionPermissions.hpp  attributes.hpp
src/loader/: CMakeLists.txt  bitmap.hpp  bootstrap.cpp  bootstrap.hpp  container.cpp  container.hpp  headers.hpp  main.cpp
src/loader/application/: behave.cpp  behave.hpp  container.cpp  container.hpp
src/loader/application/events/: NewFileSelectedEvent.hpp  UIRequestedOpenFileEvent.hpp
src/loader/dynamiclinker/: dynamiclinker.cpp  dynamiclinker.hpp
src/loader/event/: IEvent.hpp  contract.cpp  contract.hpp  event_headers.hpp
src/loader/file/: NewFileSelected.cpp
src/loader/ui/: IGuiApp.hpp  contract.cpp  contract.hpp  icons.hpp  settings.hpp
src/loader/ui/wx/: CWxWidgetsGuiApp.cpp  CWxWidgetsGuiApp.hpp  bitmap.hpp  wxApp.cpp  wxApp.hpp  wxContentPanel.cpp  wxContentPanel.hpp  wxFrame.cpp  wxFrame.hpp  wxSidebarPanel.cpp  wxSidebarPanel.hpp  wxWidgetsGuiApp.cpp  wxWidgetsGuiApp.hpp  wx_headers.hpp
tests/: CMakeLists.txt
tests/binaries/windows/: x86.exe.i64  x86_64.exe.i64
tests/core/: BinaryMother.hpp  BinaryTest.cpp  NewFileSelectedTest.cpp
tests/core/application/events/: NewFileSelectedTest.cpp
tests/core/assembler/: AssemblerTest.cpp
tests/core/file/: BinaryFileTest.cpp  BinaryModificationTest.cpp  BinaryMother.hpp  BinaryTest.cpp  NewFileSelectedTest.cpp
tests/core/modification/: AddBytesHandlerTest.cpp  AddImportHandlerTest.cpp  AddImportsHandlerTest.cpp  AddSectionHandlerTest.cpp  ChangeBytesHandlerTest.cpp
tests/loader/: bootstrapTest.cpp  containerTest.cpp
tests/shared/algo/: DependencyGraphTest.cpp
tests/shared/assembly_contract/: AssemblyContractTest.cpp
tests/shared/self_obfuscation/: DynamicLinkerTest.cpp
tests/shared/value/: AddressValueTest.cpp  ByteVecOperationsTest.cpp  UnsignedTest.cpp  UuidTest.cpp
(+121 files in other folders)
