file(GLOB_RECURSE core_SRC "*.cpp")
if (WIN32)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
endif()
add_library(core ${core_SRC})
target_link_libraries(core shared)
target_include_directories(core PUBLIC  ${SRC_INCLUDES})

find_package(asmjit REQUIRED)
include_directories(${ASMJIT_INCLUDE_DIR})
target_link_libraries(core asmjit::asmjit)
